# DeepFiberQ

./: .dockerignore  .gitignore  DeepFiberQ.ipynb  Dockerfile  README.md  pyproject.toml  start.py
configs/: config.yaml
demo/: run.ipynb
dnafiber/: __init__.py  _version_.py  callbacks.py  deployment.py  inference.py  metric.py  post_process.py  start.py  trainee.py  utils.py
dnafiber/analysis/: chart.py  const.py  ratios.py  stats.py  utils.py
dnafiber/correction/: data.py  train.py
dnafiber/data/: dataset.py  utils.py
dnafiber/model/: autopadDPT.py  steered_cnn.py  utils.py
dnafiber/postprocess/: __init__.py  core.py  error_detection.py  fiber.py  morphology.py  skan.py  types.py  utils.py
dnafiber/stats/: cluster_agreement.py  confidence.py  intergrader.py
dnafiber/ui/: Welcome.py  __init__.py  components.py  consts.py  inference.py  utils.py
dnafiber/ui/custom/: __init__.py
dnafiber/ui/custom/fiber_loader/: __init__.py
dnafiber/ui/custom/fiber_ui/: __init__.py
dnafiber/ui/custom/frontend/: package-lock.json  package.json
dnafiber/ui/pages/: 1_Load.py  2_Viewer.py  3_Analysis.py
dnafiber/ui/streamlit/: .config.toml
notebook/: cluster_agreement_cluster_means_wide.csv  cluster_agreement_cluster_summaries.csv  cluster_agreement_report.txt  cross_correlate.ipynb
notebook/assessment/: analysis.ipynb  charting.ipynb  comparison.ipynb  tools.py
notebook/correction/: data.ipynb  upload_to_hf.ipynb
notebook/delta_experiments/: analyse dv.ipynb  u2os.ipynb
notebook/delta_experiments/progression/: quantify.ipynb
notebook/errors_assesment/: generate_data.ipynb
notebook/intergraders/: analyse.ipynb  count.ipynb  inference.ipynb  properties.pkl  properties_with_IA.pkl  ratios.ipynb
notebook/noise_robustness/: df_blurred_ensemble.csv  df_blurred_ensemble_TTA.csv  df_blurred_unet_mobileones3.csv  df_blurred_unetmobileone.csv  df_blurred_unetmobileone_tta.csv  df_noise_ensemble.csv  df_noise_ensemble_TTA.csv  df_noise_unet_mobileones3.csv  df_noise_unetmobileone.csv  df_noise_unetmobileone_tta.csv  noise_robustness.ipynb
notebook/zeiss_experiments/: analyse.ipynb  experiments.py
scripts/: train.py  train.sh
test/: polar.ipynb
ui/: Welcome.py  inference.py  utils.py
ui/pages/: 1_Load.py  2_Viewer.py  2_Visualize.py  3_Analysis.py
(+11 files in other folders)
