[tool.poetry]
name = "dnafiber"
version = "0.1.7"
description = ""
authors = ["ClementPla <clement.playout@polymtl.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
lightning= "^2.5.0.post0"
monai= "^1.4.0"
segmentation_models_pytorch="^0.3.4"
huggingface_hub="^0.25.2"
czifile="~2019.7.2"
tifffile="~2024.8.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
