[tool.poetry]
name = "dnafiber"
version = "0.2.0"
description = ""
authors = ["ClementPla <clement.playout@polymtl.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
lightning= "^2.5.0.post0"
monai= "^1.4.0"
segmentation_models_pytorch="^0.4.0"
huggingface_hub="^0.25.2"
czifile="~2019.7.2"
tifffile="~2024.8.10"
streamlit = "1.43.2"
plotly = "6.0.1"                   
pandas = "2.2.3"
scipy = "1.15.2"
numpy = "^1.22.4"
matplotlib = "3.9.1"
bokeh = "^3.0.0"
streamlit_bokeh = "^3.0.0"
torchmetrics = "1.6.3"
albumentations = "2.0.3"
streamlit_image_coordinates = "0.2.1"
catppuccin = "2.4.1"
scikit-image = "0.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
